# inference-server

./: CLAUDE.md  Dockerfile  Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yaml
app/: influxdb_service.py  main.py  run_config.yaml  sensor_source.py  sliding_window_inference.py  sliding_window_loop.py
app/inference/: inference.py  run_config.yaml
app/sliding_window_inference/: influxdb_service.py
app/src/: inference.py  inference_factory.py  mlflow_service.py  models_registry.yaml  on_demand_inference.py  run_config.yaml  scheduled_config.yaml  sensor.py  time_service.py
app/src/config/: models_registry.yaml  run_config.yaml
app/src/service/: inference_service.py  mlflow_service.py  time_service.py
app/test/: inference_test.py  test_inference_factory.py
app/test/config/: models_registry.yaml
app/test/resources/: interval_config.yaml  wrong_interval_config.yaml
app/test/service/: test_mlflow_service.py  test_time_service.py
test/: test_sensor_source.py  test_sliding_window_inference.py
test/resources/: run_config.yaml
