[project]
name = "inference-server"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.1",
    "isort>=8.0.0",
    "mlflow>=3.6.0",
    "mypy>=1.19.1",
    "pytest>=9.0.1",
    "ruff>=0.15.2",
    "scikit-learn==1.6.1",
    "ual",
]

[tool.uv.sources]
ual = { git = "https://github.com/urban-air-lab/common" }
